<resources>
    <string name="app_name">AlphaWo</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_opening_sentence">開場白</string>
    <string name="pref_default_opening_sentence">Boy</string>

    <string name="pref_title_skipping_waiting_time">設定等待發出開場白的時間</string>
    <string-array name="pref_skipping_waiting_time">
        <item>5 sec</item>
        <item>8 sec</item>
        <item>10 sec</item>
        <item>13 sec</item>
        <item>15 sec</item>
    </string-array>

    <string name="pref_title_after_skipping_waiting_time">設定幾秒後對方沒回覆開場白就離開</string>
    <string-array name="pref_skipping_waiting_time_list_values">
        <item>5</item>
        <item>8</item>
        <item>10</item>
        <item>13</item>
        <item>15</item>
    </string-array>

    <string-array name="pref_after_opening_skipping_waiting_time">
        <item>5 sec</item>
        <item>8 sec</item>
        <item>10 sec</item>
        <item>13 sec</item>
        <item>15 sec</item>
    </string-array>

    <string-array name="pref_after_opening_skipping_waiting_time_list_values">
        <item>5</item>
        <item>8</item>
        <item>10</item>
        <item>13</item>
        <item>15</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_mode_find_girl">找女模式</string>
    <string name="settings_mode_garbage_talk">垃圾話模式</string>
    <string name="summary_mode_find_girl">當對方率先說話，會判定為男生然後直接離開</string>
    <string name="summary_garbage_talk">尚未完成</string>
    <string name="summary_personality_opening"></string>
    <!--(當對方回覆開場白後使用)-->
    <string name="pref_title_personality_sentence" >個性開場白(當對方回覆開場白後使用)</string>
    <string name="pref_default_personality_sentence">你好啊我是陽光宅男</string>
    <string name="settings_mode_background">背景執行模式</string>
    <string name="summary_mode_background">尚未完成</string>
    <string name="state_running">AlphaWo作用中</string>
    <string name="state_stop">AlphaWo停止了</string>
    <string name="string_find_girl">找到女孩了</string>
    <string name="string_click_to_show">點擊查看</string>
    <string name="version">版本號</string>
</resources>
